# xrpl-institutional-aegis-2026

./: 'src'-directory-structure.txt  .gitignore  LICENSE  README.md
aegis_terminal_ui/: package.json  tsconfig.json
aegis_terminal_ui/src/components/: OrderBookVisualizer.tsx  ZKProofStatus.tsx
aegis_terminal_ui/src/hooks/: useXrplWebsocket.ts
aegis_terminal_ui/src/styles/: terminal_theme.css
docs/: post_quantum_migration_xls.md  rlusd_liquidity_math.md  zk_bridge_security.md
institutional_smart_contracts/: hardhat.config.ts
institutional_smart_contracts/contracts/: DynamicFeeAMM.sol  QuantumMultiSigWallet.sol  RLUSD_YieldVault.sol
rippled_pqc_core/: CMakeLists.cmake
rippled_pqc_core/src/consensus/: AvalancheSubnet.cpp
rippled_pqc_core/src/crypto/: KeyDerivationPQC.cpp  PostQuantumSinger.cpp
scripts/: boot_local_validator.ps1  deploy_evm_testnet.sh
zk_evm_bridge/src/: rlusd_mint_verifier.rs
zk_evm_brudge/: Cargo.toml
zk_evm_brudge/src/circuits/: plonk_state_prover.rs
zk_evm_brudge/src/network/: sidechain_relayer.rs
