[package]
name = "xrpl_zk_evm_bridge"
version = "1.0.0"
edition = "2024"
authors = ["XRPL Institutional Architecture Team"]
description = "Trustless Zero-Knowledge PLONK Relayer for XRPL-EVM Interoperability"

[dependencies]
# Async Runtime & Networking
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11" # gRPC for communicating with the rippled core
reqwest = { version = "0.12", features = ["json"] }

# Modern EVM Interaction (replacing older web3 crates)
alloy-providers = "0.1"
alloy-rpc-types = "0.1"

# Advanced Cryptography & Zero-Knowledge Circuits
ark-ff = "0.4"
ark-ec = "0.4"
ark-plonk = "0.4" # Simulating the PLONK proving system

# Serialization & Logging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = "fat"       # Fat LTO for maximum proving performance
codegen-units = 1 # Forces the compiler to optimize the entire dependency graph
